mais calculos da tabela

--- a/public/json/config.json
+++ b/public/json/config.json
@@ -19,7 +19,8 @@
             "desc":"Custo do (NuvemShop)",
             "value": 4.99,
             "valueType": "%",
-            "calc": "sub"
+            "calc": "sub",
+            "all": true
         }
     ],
     "pay": [
